--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "firebase": "^10.7.0",
+    "firebase-tools": "^13.0.2",
+    "isomorphic-dompurify": "^1.12.0",
     "nodemailer": "^6.9.7",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
