--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@looop/quill-image-resize-module-react": "^3.1.5",
     "@tanstack/react-query": "4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -11,12 +12,13 @@
     "firebase-tools": "^13.0.2",
     "isomorphic-dompurify": "^1.12.0",
     "nodemailer": "^6.9.7",
+    "quill-image-drop-module": "^1.0.3",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-quill": "^2.0.0",
-    "react-router-dom": "^6.20.0",
+    "react-quill": "1.3.5",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.1",
     "uuid": "^9.0.1",
