--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://annalog-project.netlify.app/",
   "eslintConfig": {
     "extends": [
       "react-app",
