--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "styled-components": "^6.1.1",
     "uuid": "^9.0.1",
     "v4": "^0.0.1",
