--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "isomorphic-dompurify": "^1.12.0",
     "nodemailer": "^6.9.7",
     "quill-image-drop-module": "^1.0.3",
+    "quill-image-resize": "^3.0.9",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
