--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^10.7.0",
     "firebase-tools": "^13.0.2",
     "isomorphic-dompurify": "^1.12.0",
+    "quill-image-resize": "^3.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
