--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "firebase-tools": "^13.0.2",
     "isomorphic-dompurify": "^1.12.0",
     "quill-image-resize": "^3.0.9",
+    "quill-image-resize-module": "^3.0.0",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
